// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileBottomNav > renders links for main sections 1`] = `
<nav
  aria-label="Main navigation"
  class="fixed bottom-0 left-0 right-0 z-50 flex h-[calc(3.5rem+env(safe-area-inset-bottom))] w-full items-center justify-around border-t border-glass-border bg-glass backdrop-blur-md pb-safe shadow-glass transition-transform duration-300 md:hidden"
  role="navigation"
>
  <a
    aria-current="page"
    aria-label="Home"
    class="group relative flex flex-1 flex-col items-center justify-center gap-1 py-1 text-[var(--secondary-text)] transition-colors duration-200 active:scale-95 active text-primary-main font-semibold"
    data-discover="true"
    href="/dashboard"
  >
    <div
      class="absolute inset-x-3 inset-y-1 rounded-xl bg-primary-main/10 dark:bg-primary-main/20"
    />
    <span
      class="z-10 transition-transform duration-200 -translate-y-0.5 scale-110"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="DashboardIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M3 13h8V3H3zm0 8h8v-6H3zm10 0h8V11h-8zm0-18v6h8V3z"
        />
      </svg>
    </span>
    <span
      class="z-10 text-[10px] uppercase tracking-wider transition-opacity duration-200 opacity-100 font-bold"
    >
      Home
    </span>
  </a>
  <a
    aria-label="News"
    class="group relative flex flex-1 flex-col items-center justify-center gap-1 py-1 text-[var(--secondary-text)] transition-colors duration-200 active:scale-95 hover:bg-primary-main/5"
    data-discover="true"
    href="/news"
  >
    <span
      class="z-10 transition-transform duration-200 group-active:scale-95"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="ArticleIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-5 14H7v-2h7zm3-4H7v-2h10zm0-4H7V7h10z"
        />
      </svg>
    </span>
    <span
      class="z-10 text-[10px] uppercase tracking-wider transition-opacity duration-200 opacity-70"
    >
      News
    </span>
  </a>
  <a
    aria-label="Events"
    class="group relative flex flex-1 flex-col items-center justify-center gap-1 py-1 text-[var(--secondary-text)] transition-colors duration-200 active:scale-95 hover:bg-primary-main/5"
    data-discover="true"
    href="/events"
  >
    <span
      class="z-10 transition-transform duration-200 group-active:scale-95"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="EventNoteIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M17 10H7v2h10zm2-7h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 16H5V8h14zm-5-5H7v2h7z"
        />
      </svg>
    </span>
    <span
      class="z-10 text-[10px] uppercase tracking-wider transition-opacity duration-200 opacity-70"
    >
      Events
    </span>
  </a>
  <a
    aria-label="Schedule"
    class="group relative flex flex-1 flex-col items-center justify-center gap-1 py-1 text-[var(--secondary-text)] transition-colors duration-200 active:scale-95 hover:bg-primary-main/5"
    data-discover="true"
    href="/schedule"
  >
    <span
      class="z-10 transition-transform duration-200 group-active:scale-95"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="TodayIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 16H5V8h14zM7 10h5v5H7z"
        />
      </svg>
    </span>
    <span
      class="z-10 text-[10px] uppercase tracking-wider transition-opacity duration-200 opacity-70"
    >
      Schedule
    </span>
  </a>
  <a
    aria-label="Profile"
    class="group relative flex flex-1 flex-col items-center justify-center gap-1 py-1 text-[var(--secondary-text)] transition-colors duration-200 active:scale-95 hover:bg-primary-main/5"
    data-discover="true"
    href="/profile"
  >
    <span
      class="z-10 transition-transform duration-200 group-active:scale-95"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="PersonIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
        />
      </svg>
    </span>
    <span
      class="z-10 text-[10px] uppercase tracking-wider transition-opacity duration-200 opacity-70"
    >
      Profile
    </span>
  </a>
</nav>
`;

exports[`MobileBottomNav > renders links for main sections 2`] = `
<div>
  <nav
    aria-label="Main navigation"
    class="fixed bottom-0 left-0 right-0 z-50 flex h-[calc(3.5rem+env(safe-area-inset-bottom))] w-full items-center justify-around border-t border-glass-border bg-glass backdrop-blur-md pb-safe shadow-glass transition-transform duration-300 md:hidden"
    role="navigation"
  >
    <a
      aria-current="page"
      aria-label="Home"
      class="group relative flex flex-1 flex-col items-center justify-center gap-1 py-1 text-[var(--secondary-text)] transition-colors duration-200 active:scale-95 active text-primary-main font-semibold"
      data-discover="true"
      href="/dashboard"
    >
      <div
        class="absolute inset-x-3 inset-y-1 rounded-xl bg-primary-main/10 dark:bg-primary-main/20"
      />
      <span
        class="z-10 transition-transform duration-200 -translate-y-0.5 scale-110"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="DashboardIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 13h8V3H3zm0 8h8v-6H3zm10 0h8V11h-8zm0-18v6h8V3z"
          />
        </svg>
      </span>
      <span
        class="z-10 text-[10px] uppercase tracking-wider transition-opacity duration-200 opacity-100 font-bold"
      >
        Home
      </span>
    </a>
    <a
      aria-label="News"
      class="group relative flex flex-1 flex-col items-center justify-center gap-1 py-1 text-[var(--secondary-text)] transition-colors duration-200 active:scale-95 hover:bg-primary-main/5"
      data-discover="true"
      href="/news"
    >
      <span
        class="z-10 transition-transform duration-200 group-active:scale-95"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="ArticleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-5 14H7v-2h7zm3-4H7v-2h10zm0-4H7V7h10z"
          />
        </svg>
      </span>
      <span
        class="z-10 text-[10px] uppercase tracking-wider transition-opacity duration-200 opacity-70"
      >
        News
      </span>
    </a>
    <a
      aria-label="Events"
      class="group relative flex flex-1 flex-col items-center justify-center gap-1 py-1 text-[var(--secondary-text)] transition-colors duration-200 active:scale-95 hover:bg-primary-main/5"
      data-discover="true"
      href="/events"
    >
      <span
        class="z-10 transition-transform duration-200 group-active:scale-95"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="EventNoteIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 10H7v2h10zm2-7h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 16H5V8h14zm-5-5H7v2h7z"
          />
        </svg>
      </span>
      <span
        class="z-10 text-[10px] uppercase tracking-wider transition-opacity duration-200 opacity-70"
      >
        Events
      </span>
    </a>
    <a
      aria-label="Schedule"
      class="group relative flex flex-1 flex-col items-center justify-center gap-1 py-1 text-[var(--secondary-text)] transition-colors duration-200 active:scale-95 hover:bg-primary-main/5"
      data-discover="true"
      href="/schedule"
    >
      <span
        class="z-10 transition-transform duration-200 group-active:scale-95"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="TodayIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 16H5V8h14zM7 10h5v5H7z"
          />
        </svg>
      </span>
      <span
        class="z-10 text-[10px] uppercase tracking-wider transition-opacity duration-200 opacity-70"
      >
        Schedule
      </span>
    </a>
    <a
      aria-label="Profile"
      class="group relative flex flex-1 flex-col items-center justify-center gap-1 py-1 text-[var(--secondary-text)] transition-colors duration-200 active:scale-95 hover:bg-primary-main/5"
      data-discover="true"
      href="/profile"
    >
      <span
        class="z-10 transition-transform duration-200 group-active:scale-95"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </span>
      <span
        class="z-10 text-[10px] uppercase tracking-wider transition-opacity duration-200 opacity-70"
      >
        Profile
      </span>
    </a>
  </nav>
  <div
    aria-hidden="true"
    class="h-[calc(3.5rem+env(safe-area-inset-bottom))] md:hidden"
  />
</div>
`;
